# atmega-meteo

./: .gitignore  Makefile  atmega-meteo.c  bitops.h  blink.c  blink.h  defines.h  dht11  dht11.c  dht11.h  dziekanat  hd44780.c  kalwi  lcd.c  lcd.h  meteo  pollution  temp.c  uart.c  uart.h
atmega-meteo-board/: Makefile
atmega-meteo-board/src/: Pollution.hpp  SerialHandler.cpp  SerialHandler.hpp  Weather.hpp  atmega-meteo.cpp
atmega-meteo-board/src/hw/: defines.hpp
atmega-meteo-board/src/hw/lcd/: LCD.cpp  LCD.hpp
atmega-meteo-board/src/hw/sensor/: DHT11.cpp  DHT11.hpp
atmega-meteo-board/src/slide/: DHT11Slide.hpp  IndoorSlide.cpp  IndoorSlide.hpp  PollutionSlide.cpp  PollutionSlide.hpp  Slide2x16.hpp  SlideSwitcher.cpp  WeatherSlide.cpp  WeatherSlide.hpp
atmega-meteo-driver/: atmega-meteo-driver-loop  atmega-meteo-driver.cabal  cabal.sandbox.config  stack.yaml
atmega-meteo-driver/src/: Main.hs  Pollution.hs  Weather.hs
src/: DHT11Slide.cpp  DHT11Slide.hpp  Makefile  Pollution.hpp  PollutionSlide.hpp  SerialHandler.cpp  SerialHandler.hpp  SlideSwitcher.hpp  atmega-meteo.cpp  bitops.hpp  blink.cpp  defines.hpp  interrupt.cpp  interrupt.hpp  runtime.cpp
src/hw/lcd/: LCD.cpp  LCD.hpp  Slide.hpp
src/hw/serial/: UART.cpp
src/lcd/: HD44780.cpp  HD44780.hpp  LCD.cpp  LCD.hpp  Slide.hpp  Slide2x16.cpp  Slide2x16.hpp  hd44780.cpp  lcd.cpp  lcd.hpp
src/sensor/: DHT11.cpp  DHT11.hpp
src/serial/: Serial.cpp  Serial.hpp  UART.cpp  UART.hpp  uart.cpp
src/slide/: PollutionSlide.cpp  PollutionSlide.hpp  SlideSwitcher.hpp
(+1 files in other folders)
