name:                atmega-meteo-driver
version:             0.1.0.0
description:         Atmel µC-based meteo station serial driver
license:             GPL-3
license-file:        LICENSE
author:              Marcin Moskal
maintainer:          mmos@memleak.pl
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

executable atmega-meteo-driver
  main-is:             Main.hs
  other-modules:       Pollution
                     , Weather
  build-depends:       base >=4.8 && <5
                     , aeson >=1.2
                     , bytestring >=0.10
                     , http-conduit >=2.3
                     , serial >=0.2
                     , time >=1.8
                     , xml >=1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
